--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,116 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-2.32MB/s(Youtube:不良林), server: 116.129.254.212, port: 48606, type: ssr, cipher: aes-256-cfb, password: GjRQkK, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 1062:tLkKEk, obfs-param: ""}
-  - {name: 🇨🇳 中国-611.6KB/s(Youtube:不良林), server: 116.129.254.212, port: 48603, type: ssr, cipher: aes-256-cfb, password: GjRQkK, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 1062:tLkKEk, obfs-param: ZEM1dFpTOTJjRzVvWVhR}
-  - {name: 🇺🇸 美国-357.4KB/s(Youtube:不良林), server: 38.91.101.62, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
-  - {name: 🇺🇸 美国-480.6KB/s(Youtube:不良林), server: 142.202.48.74, port: 8091, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
-  - {name: 🇨🇳 中国-225.1KB/s(Youtube:不良林), server: hk6702.fans8.xyz, port: 443, type: trojan, password: 08445e6d-0a42-4433-8565-2e4b7de180ac, sni: hk6702.fans8.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-931.5KB/s(Youtube:不良林), server: 116.129.254.212, port: 48609, type: ssr, cipher: aes-256-cfb, password: GjRQkK, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 1062:tLkKEk, obfs-param: ""}
-  - {name: 🇯🇵 日本-1.10MB/s(Youtube:不良林), server: jgwdb4.gaox.ml, port: 443, type: trojan, password: d06a3f01-1ff0-4792-9b8e-a5a604bc74a2, sni: jgwdb4.gaox.ml, skip-cert-verify: true}
-  - {name: 🇨🇳 台湾-620.9KB/s(Youtube:不良林), server: 330tw.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 330tw.fans8.xyz}}
-  - {name: 🇨🇳 中国-5.85MB/s(Youtube:不良林), server: 180.163.62.91, port: 10065, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
-  - {name: 🇭🇰 香港-487.0KB/s(Youtube:不良林), server: 527hk1.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 527hk1.fans8.xyz}}
+  - {name: 🇨🇳 中国-1.50MB/s(Youtube:不良林), server: ingress-i1.onebox6.org, port: 38201, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i1.onebox6.org}}
+  - {name: 🇨🇳 中国-505.7KB/s(Youtube:不良林), server: hk6702.fans8.xyz, port: 443, type: trojan, password: 08445e6d-0a42-4433-8565-2e4b7de180ac, sni: hk6702.fans8.xyz, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-1.55MB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-1.67MB/s(Youtube:不良林), server: 331tw.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 331tw.fans8.xyz}}
+  - {name: 🇺🇸 美国-1.21MB/s(Youtube:不良林), server: 38.91.101.62, port: 9101, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
+  - {name: 🇦🇺 澳大利亚-1.47MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
+  - {name: 🇬🇧 英国-2.87MB/s(Youtube:不良林), server: 88.150.137.201, port: 1021, type: ssr, cipher: aes-128-ctr, password: sEscPBiAD9K$&@79, protocol: auth_aes128_md5, obfs: tls1.2_ticket_auth, protocol-param: "", obfs-param: ""}
+  - {name: 🇫🇷 法国-1.25MB/s(Youtube:不良林), server: 51.210.51.88, port: 443, type: ssr, cipher: aes-192-ctr, password: sEscPBiAD9K$&@79, protocol: auth_chain_a, obfs: tls1.2_ticket_auth, protocol-param: "", obfs-param: ""}
+  - {name: 🇸🇬 新加坡-305.9KB/s(Youtube:不良林), server: 103.253.26.20, port: 443, type: vmess, uuid: aba50dd4-5484-3b05-b14a-4661caf862d5, alterId: 4, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ws, ws-headers: {Host: 103.253.26.20}}
+  - {name: 🇸🇬 新加坡-1.51MB/s(Youtube:不良林), server: zecjk.com, port: 443, type: vmess, uuid: aba50dd4-5484-3b05-b14a-4661caf862d5, alterId: 4, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ws, ws-headers: {Host: zecjk.com}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-2.32MB/s(Youtube:不良林)
-      - 🇨🇳 中国-611.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-357.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-480.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-225.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-931.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.10MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-620.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.85MB/s(Youtube:不良林)
-      - 🇭🇰 香港-487.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.50MB/s(Youtube:不良林)
+      - 🇨🇳 中国-505.7KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.55MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.67MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.21MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.47MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.87MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.25MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-305.9KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.51MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-2.32MB/s(Youtube:不良林)
-      - 🇨🇳 中国-611.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-357.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-480.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-225.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-931.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.10MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-620.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.85MB/s(Youtube:不良林)
-      - 🇭🇰 香港-487.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.50MB/s(Youtube:不良林)
+      - 🇨🇳 中国-505.7KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.55MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.67MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.21MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.47MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.87MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.25MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-305.9KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.51MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-2.32MB/s(Youtube:不良林)
-      - 🇨🇳 中国-611.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-357.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-480.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-225.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-931.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.10MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-620.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.85MB/s(Youtube:不良林)
-      - 🇭🇰 香港-487.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.50MB/s(Youtube:不良林)
+      - 🇨🇳 中国-505.7KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.55MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.67MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.21MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.47MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.87MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.25MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-305.9KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.51MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇨🇳 台湾-620.9KB/s(Youtube:不良林)
-      - 🇭🇰 香港-487.0KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-2.32MB/s(Youtube:不良林)
-      - 🇨🇳 中国-611.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-357.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-480.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-225.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-931.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.10MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-620.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.85MB/s(Youtube:不良林)
-      - 🇭🇰 香港-487.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.50MB/s(Youtube:不良林)
+      - 🇨🇳 中国-505.7KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.55MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.67MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.21MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.47MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.87MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.25MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-305.9KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.51MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-2.32MB/s(Youtube:不良林)
-      - 🇨🇳 中国-611.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-357.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-480.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-225.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-931.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.10MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-620.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.85MB/s(Youtube:不良林)
-      - 🇭🇰 香港-487.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.50MB/s(Youtube:不良林)
+      - 🇨🇳 中国-505.7KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.55MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.67MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.21MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.47MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.87MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.25MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-305.9KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.51MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-2.32MB/s(Youtube:不良林)
-      - 🇨🇳 中国-611.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-357.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-480.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-225.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-931.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.10MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-620.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.85MB/s(Youtube:不良林)
-      - 🇭🇰 香港-487.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.50MB/s(Youtube:不良林)
+      - 🇨🇳 中国-505.7KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.55MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.67MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.21MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.47MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.87MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.25MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-305.9KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.51MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -130,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-2.32MB/s(Youtube:不良林)
-      - 🇨🇳 中国-611.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-357.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-480.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-225.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-931.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.10MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-620.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.85MB/s(Youtube:不良林)
-      - 🇭🇰 香港-487.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.50MB/s(Youtube:不良林)
+      - 🇨🇳 中国-505.7KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.55MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.67MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.21MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.47MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.87MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.25MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-305.9KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.51MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
